--- a/sections/implementacion.tex
+++ b/sections/implementacion.tex
@@ -1,5 +1,8 @@
 \section{Implementación}
 
+El objetivo mínimo propuesto es el diseño y construcción de la primera etapa de la fuente de switching. 
+Se deben obtener las señales de tensión y corriente sobre los elementos operando a lazo abierto con un ciclo de trabajo fijo. 
+
 Se diseñó un circuito impreso y se construyó un prototipo funcional para cumplir con las especificaciones propuestas. 
 Debido a que el costo de una batería de litio de las características necesarias es elevado,
 se redujo la tensión de salida del conversor a un límite de 12.6V,
