Co-authored-by: nicoelcapo98 <nicoelcapo98@users.noreply.github.com>

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{subcaption}
 \usepackage{lscape}
 \usepackage{geometry}
+\usepackage{amsmath}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
