--- a/sections/simulaciones.tex
+++ b/sections/simulaciones.tex
@@ -1,5 +1,34 @@
 \section{Simulaciones}
 
+% 1) Tensión de salida en el colector del TL494
+% 2) Tensión en el capacitor Ct
+% 3) Tensión de salida de la etapa de ganancia de corriente
+% 4) Tensión en el primario del transformador del driver
+% 5) Tensión en el secundario del transformador del driver
+% 6) Corriente en el primario del transformador del driver
+% 7) Corriente en la resistencia entre gate y source del driver
+% 8) Corriente que circula por el gate del MOSFET 1 (high side)
+% 9) Corriente que circula por el gate del MOSFET 2 (low side)
+% 10) Corriente que circula por el drain del MOSFET 1 (high side)
+% 11) Corriente que circula por el drain del MOSFET 2 (low side)
+% 12) Corriente en el primario del transformador de potencia 
+% 13) Corriente en el inductor del filtro de salida 
+% 14) Corriente por la carga y su ripple
+% 15) Tensión entre gate y source del MOSFET 1 (high side)
+% 16) Tensión entre drain y source del MOSFET 1 (high side)
+% 17) Tensión entre gate y source del MOSFET 2 (low side)
+% 18) Tensión entre drain y source del MOSFET 2 (low side)
+% 19) Tensión en el primario del transformador de potencia 
+% 20) Tensión en el secundario del transformador de potencia 
+% 21) Tensión de salida sobre la carga y su ripple 
+% 22) Tensión en el inductor del filtro de salida
+% 23) Corriente de salida por colector del TL494 
+% 24) Tensión cátodo ánodo en el diodo D1
+% 25) Tensión cátodo ánodo en el diodo D2
+% 26) Tensión cátodo ánodo en el diodo D3
+% 27) Tensión cátodo ánodo en el diodo D4
+% 28) Corriente en el secundario del transformador de potencia
+
 En esta sección se comparan las formas de onda obtenidas con el circuito una vez implementado, con las simulaciones realizadas para el diseño del cargador de baterías.
 
 \subsection{Generador de señal PWM}
